--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link crossorigin="anonymous" integrity="sha384-RjttgTTbpcVaXKI44yvl7+n0w4MzsnjLrJ7FPZY48LuPZjaVstg7c9PyePxlqDlJ"
           href="https://lib.baomitu.com/normalize/0/normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_2874538_12p2of9llmv.css">
-    <title>Vite App</title>
+    <title>爱的飞行日记</title>
 </head>
 <body>
 <div id="app"></div>
