fix: 删除冗余代码

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" href="/favicon.ico"/>
-    <link crossorigin="anonymous" integrity="sha384-RjttgTTbpcVaXKI44yvl7+n0w4MzsnjLrJ7FPZY48LuPZjaVstg7c9PyePxlqDlJ"
-          href="https://lib.baomitu.com/normalize/0/normalize.min.css" rel="stylesheet">
+    <link href="//lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/normalize/8.0.1/normalize.min.css" type="text/css"
+          rel="stylesheet"/>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_2874538_3ua24rver18.css">
     <title>爱的飞行日记</title>
 </head>
