fix: 首页右下方内容补充

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
           rel="stylesheet"/>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_2874538_3ua24rver18.css">
     <title>爱的飞行日记</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <meta name="renderer" content="webkit">
+    <meta name="force-rendering" content="webkit">
+    <meta data-rh="true" name="keywords" content="">
+    <meta data-rh="true" name="description" content="">
 </head>
 <body>
 <div id="app"></div>
