--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta name="renderer" content="webkit">
     <meta name="force-rendering" content="webkit">
+    <meta name="google-adsense-account" content="ca-pub-3182861355145002">
     <meta data-rh="true" name="keywords" content="">
     <meta data-rh="true" name="description" content="">
 </head>
